k8s_manifests/cluster-tools/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations: {}
  name: dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.fahmed.org`)
      middlewares:
        - name: oauth-errors
          namespace: oauth2-proxy-app
        - name: oauth-auth
          namespace: oauth2-proxy-app
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik-tls
